[package]
name = "ratbaseconfig"
version = "0.1.0"
edition = "2021"
authors = ["maksimdavydenko"]
description = "lib with base ratatui config for my (mb your) apps"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nobel-von-it/ratbaseconf"
repository = "https://github.com/nobel-von-it/ratbaseconf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.25.0"
anyhow = "1.0.79"